--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,27 @@
 
 
 
+@keyframes rgbShift {
+  0% {
+    background-color: rgb(255, 0, 0);
+  }
+  33% {
+    background-color: rgb(0, 255, 0);
+  }
+  66% {
+    background-color: rgb(255, 0, 195);
+  }
+  100% {
+    background-color: rgb(255, 0, 0);
+  }
+}
+
+.rgb-animate {
+  animation: rgbShift 4s infinite linear;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  ;
+  border: none;
+}
+
